# kodegen

./: .claude  .cyrup_release_state.json  .gitignore  .mcp.json  CONTRIBUTING.md  Cargo.toml  README.md  TASK_subprocess_kodegen_sse.md  TODO-RENAME-SIGN.md  check-output.txt  clippy-output.txt  clippy-warnings.txt  justfile
.claude/: .mcp.json  SYSTEM_PROMPT.md
.claude/commands/: all1.md  all2.md  all3.md  aug.md  codereview.md  qa.md  read.md  task.md  ttt.md
.config/: hakari.toml
.devcontainer/: Dockerfile
.github/workflows/: release.yml  static.yml
.kodegen/citescrape/docs.python.org/.search_index/: .managed.json  meta.json
.kodegen/citescrape/ratatui.rs/.search_index/: meta.json
.kodegen/claude/: SYSTEM_PROMPT.md  settings.local.json
.kodegen/claude/commands/: all1.md  all2.md  all3.md  aug.md  codereview.md  qa.md  read.md  ttt.md
.kodegen/toolset/: browser.json  citescrape.json  claude-agent.json  config.json  core.json  database.json  filesystem.json  git.json  github.json  introspection.json  memory.json  process.json  prompt.json  reasoner.json  terminal.json
data/: prompts.json
docs/: word-boundary.md
docs/invalid-domain-that-does-not-exist-12345.com/: manifest.json
docs/ratatui.rs/: manifest.json
docs/ratatui.rs/.search_index/: .managed.json  meta.json
docs/ratatui.rs/ratatui.rs/: index.json  index.md
docs/ratatui.rs/ratatui.rs/installation/: index.json  index.md
docs/ratatui.rs/ratatui.rs/installation/feature-flags/: index.json  index.md
docs/ratatui.rs/ratatui.rs/tutorials/: index.json  index.md
docs/ratatui.rs/ratatui.rs/tutorials/counter-app/: index.json  index.md
docs/ratatui.rs/ratatui.rs/tutorials/hello-ratatui/: index.json  index.md
docs/tokio.rs/: manifest.json
docs/tokio.rs/.search_index/: .managed.json  meta.json
docs/tokio.rs/tokio.rs/: index.json  index.md
docs/tokio.rs/tokio.rs/blog/2025-09-26-announcing-tokio-conf-cfp/: index.json  index.md
docs/tokio.rs/tokio.rs/tokio/tutorial/: index.json  index.md
forks/surrealdb/: Cargo.toml
forks/surrealdb/crates/core/src/iam/: issue.rs  verify.rs
forks/surrealdb/crates/core/src/iam/entities/: action.rs  roles.rs
forks/surrealdb/crates/core/src/syn/error/: render.rs
forks/surrealdb/crates/core/src/val/: strand.rs
forks/surrealdb/crates/sdk/src/api/engine/: proto.rs
src/: main.rs
src/cli/: mod.rs  toolset.rs  types.rs
src/commands/: claude.rs  mod.rs  monitor.rs  plugin.rs
src/embedded/: mod.rs
src/hooks/: mod.rs  notify.rs  stop.rs
src/stdio/: metadata.rs  mod.rs  server.rs  session_mapper.rs
src/stdio/metadata/: mod.rs  routing.rs  types.rs
src/stdio/metadata/category_metadata/: ai_reasoning.rs  browser.rs  candle_agent.rs  citescrape.rs  claude_agent.rs  config.rs  data_persistence.rs  database.rs  execution.rs  filesystem.rs  git.rs  github.rs  infrastructure.rs  introspection.rs  mod.rs  process.rs  prompt.rs  reasoner.rs  sequential_thinking.rs  terminal.rs  version_control.rs  web_external.rs
src/task/: YAMLADV_1.md
tasks/: 001-convert-runtime-to-pure-tokio.md  003-COMPLETION-SUMMARY.md  003-convert-content-saver-to-pure-async.md  004-convert-page-extractor-to-pure-async.md  005-update-public-api-lib-rs.md
workspace-hack/: Cargo.toml
