[package]
name = "kodegen"
version = "0.10.14"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]
license = "Apache-2.0 OR MIT"


[package.metadata.bundle]
identifier = "ai.kodegen.kodegen"
publisher = "KODEGEN.ᴀɪ"
copyright = "Copyright © 2025"
short_description = "Memory-efficient, Blazing-Fast, MCP tools for code generation agents."

[package.metadata.bundle.category]
linux = "Development"
macos = "public.app-category.developer-tools"


[dependencies]
cyrup_termcolor = "2"
kodegen_config = { version = "0.10" }
kodegen_mcp_schema = { version = "0.10" }
kodegen_config_manager = { version = "0.10" }
kodegen_mcp_client = { version = "0.10" }
kodegen_native_notify = { version = "0.10" }

# Lazy static initialization
once_cell = "1.21"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# MCP SDK
rmcp = { version = "0.11", features = ["client", "schemars", "server", "transport-child-process", "transport-io", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }

# HTTP client (matches kodegen-mcp-client and rmcp versions)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Schema generation
schemars = "1"

# Link-time plugin registration for automatic tool discovery
inventory = "0.3"

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Random number generation (for connection retry jitter)
rand = "0.9"

# Cross-platform compatibility
dirs = "6"

# Date/time for instance ID generation
chrono = "0.4"

# UUID generation for session mapping
uuid = { version = "1", features = ["v4"] }

# Thread-safe HashMap for session mapper
dashmap = "6"

# Binary path resolution
which = "8"

# Directory embedding for .kodegen assets
include_dir = "0.7"

[features]
default = []

[[bin]]
name = "kodegen"
path = "src/main.rs"
